# Space-Concordia-Robotics

install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: robot_news_station.py  smartphone.py
